fix elements to center on mobile devices

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -32,7 +32,7 @@ body {
 .row {
     display: flex;
     flex-wrap: wrap;
-    max-width: 100%;
+    max-width: 100vh;
     overflow-x: hidden;
 }
 
